--- a/NUFSCar/app/src/main/res/values/colors.xml
+++ b/NUFSCar/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#EEEEEE</color>
-    <color name="darkgray">#CCCCCC</color>
+    <color name="darkgray">#BBBBBB</color>
     <color name="black">#000000</color>
 </resources>
