--- a/NUFSCar/app/src/main/res/layout/activity_events_details.xml
+++ b/NUFSCar/app/src/main/res/layout/activity_events_details.xml
@@ -20,7 +20,7 @@
             android:text="Titulo do Evento"
             android:textSize="30dp"
             android:textColor="@color/black"
-
+            android:textAlignment="center"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:layout_width="wrap_content"
@@ -33,6 +33,7 @@
             android:textColor="@color/darkgray"
             android:layout_below="@id/events_details_title"
             android:layout_centerHorizontal="true"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -51,7 +52,7 @@
             android:layout_below="@id/events_details_date"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="1000dp" />
+            android:layout_height="wrap_content" />
 
         <RadioButton
             android:id="@+id/events_details_radio"
