--- a/NUFSCar/app/src/main/res/layout/events_layout.xml
+++ b/NUFSCar/app/src/main/res/layout/events_layout.xml
@@ -5,15 +5,21 @@
 
     <TextView
         android:id="@+id/text_view_events"
+        android:text="Eventos"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40px"
+        android:textSize="30dp"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"/>
 
     <ListView
         android:id="@+id/list_view_events"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/text_view_events"></ListView>
+        android:layout_below="@+id/text_view_events">
+
+    </ListView>
 
 </RelativeLayout>
