--- a/NUFSCar/app/src/main/res/layout/news_feed_layout.xml
+++ b/NUFSCar/app/src/main/res/layout/news_feed_layout.xml
@@ -7,13 +7,19 @@
         android:id="@+id/text_view_news_feed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40px"
+        android:text="Notícias"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:textSize="30dp"
         android:layout_centerHorizontal="true"/>
 
     <ListView
         android:id="@+id/list_view_news_feed"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/text_view_news_feed"></ListView>
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/text_view_news_feed">
+
+    </ListView>
 
 </RelativeLayout>
