--- a/NUFSCar/app/src/main/res/menu/activity_base_drawer.xml
+++ b/NUFSCar/app/src/main/res/menu/activity_base_drawer.xml
@@ -13,11 +13,11 @@
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Favoritos" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Calendario" />
     </group>
 
     <item android:title="Communicate">
